--- a/információ.html
+++ b/információ.html
@@ -3,5 +3,6 @@
 <h2>Kedvenc sportom a lovaglás</h2>
 <h2>7 éve hegedülök</h2>
 <img src="hegedű.jpg.crdownload" alt="">
-
+<style{background color: rosegold}
+                  
 
