--- a/Rólam.html
+++ b/Rólam.html
@@ -54,3 +54,16 @@
         <td>-</td>
     </tr>
 </table>
+ table {
+     border: 5px; border-style:groove;
+    }
+</style>
+<style>
+    body {
+        background: url("szellem.jpg");
+        background-repeat: no-repeat;
+        background-size:cover
+    }
+</style>
+<h2><strong>Kép rólam</strong></h2>
+
