--- a/J11.16.html
+++ b/J11.16.html
@@ -9,6 +9,9 @@ max="5">
     {console.log (z**e)target.value}</Script>
     <body>
         <style>
-        {bacground-color:blue}
+        {bacground-color:blue
+         text-decoration:underline;
+         text-decoration-color: blue;
+            }
         </style>
     </body>
