--- a/J11.16.html
+++ b/J11.16.html
@@ -5,6 +5,9 @@ id="i1"
 onchange="cica(event)"
 min="0"
 max="5">
+<body>
+<button onclick="f()">görgess</button>
+</body>
 <Script>function cica
     {console.log (z**e)target.value}</Script>
     <body>
@@ -15,3 +18,4 @@ max="5">
             }
         </style>
     </body>
+<hr>
